Добавляет исправления проверяющего

--- a/catalog.html
+++ b/catalog.html
@@ -49,7 +49,7 @@
                           Любительская<br />селфи-палка
                         </span>
                       </a>
-                      <button class="basket-item-delete">
+                      <button class="basket-item-delete" type="button">
                         <span class="visually-hidden">Удалить товар из корзины.</span>
                       </button>
                     </li>
@@ -61,7 +61,7 @@
                           Профессиональная<br />селфи-палка
                         </span>
                       </a>
-                      <button class="basket-item-delete">
+                      <button class="basket-item-delete" type="button">
                         <span class="visually-hidden">Удалить товар из корзины.</span>
                       </button>
                     </li>
@@ -315,7 +315,7 @@
                       </div>
                       <div class="product-text-wrapper">
                         <h3 class="product-title">
-                          Селфи-палка &#171;Следуй за мной&#187;
+                          Селфи-палка &#171;Следуй за&nbsp;мной&#187;
                         </h3>
                         <span class="product-price">1 500 ₽</span>
                       </div>
