--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                           Любительская<br />селфи-палка
                         </span>
                       </a>
-                      <button class="basket-item-delete">
+                      <button class="basket-item-delete" type="button">
                         <span class="visually-hidden">Удалить товар из корзины.</span>
                       </button>
                     </li>
@@ -60,7 +60,7 @@
                           Профессиональная<br />селфи-палка
                         </span>
                       </a>
-                      <button class="basket-item-delete">
+                      <button class="basket-item-delete" type="button">
                         <span class="visually-hidden">Удалить товар из корзины.</span>
                       </button>
                     </li>
